# QuantitativeFinance

./: .gitignore  README.md  pyproject.toml
notebooks/: black_sholes.ipynb  bonds.ipynb  brownian.ipynb  capm.ipynb  markowitz.ipynb  stochastic.ipynb
