[tool.poetry]
name = "quantitativefinance"
version = "0.1.0"
description = ""
authors = ["Tejan <tej780@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
yfinance = "^0.2.20"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"
mypy = "^1.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
